@@ -39,8 +39,8 @@ else:
 from .config import SandboxConfig
 from .sandbox_class import Sandbox
 
-from .clear_import import ClearImport
-Sandbox.PROTECTIONS.append(ClearImport)
+#from .clear_import import ClearImport
+#Sandbox.PROTECTIONS.append(ClearImport)
 
 from .builtins import CleanupBuiltins
 Sandbox.PROTECTIONS.append(CleanupBuiltins)
